# reflex-websockets

./: .gitignore  README.md  default.nix  shell.nix  stack.yaml
example/: README.md  example.cabal
example/src/: Main.hs
example/static/: index.js
reflex-platform/: github.json
reflex-websockets/: LICENSE  reflex-websockets.cabal
reflex-websockets/src/Reflex/: Base.hs  WebSocketServer.hs
static/: index.html
