name:                example
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/ElvishJerricco/reflex-websockets#readme
license:             BSD3
license-file:        LICENSE
author:              Will Fancher
maintainer:          elvishjerricco@gmail.com
copyright:           2016
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable example
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.9 && < 5
                     , containers
                     , reflex-websockets
                     , reflex
                     , servant-server
                     , wai-websockets
                     , websockets
                     , wai
                     , http-types
                     , warp
--------------------------------------------------------------------------------
                     , dependent-sum
                     , ref-tf
  default-language:    Haskell2010