name:                reflex-websockets
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/ElvishJerricco/reflex-websockets#readme
license:             BSD3
license-file:        LICENSE
author:              Will Fancher
maintainer:          elvishjerricco@gmail.com
copyright:           2016
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Reflex.WebSocketServer
  build-depends:       base >= 4.9 && < 5
                     , containers
                     , lens
                     , reflex
                     , websockets
                     , async
  ghc-options:         -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ElvishJerricco/reflex-websockets
