name:                reflex-websockets
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ElvishJerricco/reflex-websockets#readme
license:             BSD3
license-file:        LICENSE
author:              Will Fancher
maintainer:          elvishjerricco@gmail.com
copyright:           2016
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Reflex.WebSocketServer
                     , Reflex.Base
  build-depends:       base >= 4.9 && < 5
                     , containers
                     , lens
                     , reflex
                     , websockets
                     , async
                     , ref-tf
                     , dependent-sum
  ghc-options:         -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ElvishJerricco/reflex-websockets
